# market_stock

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.example  error_log.txt  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7fd1ecdb54e8_initial_migration.py
requirements/: base.in  base.txt  dev.in  dev.txt
server/: __init__.py
server/api/: routes.py
server/api/v1/: stocks.py
server/application/: external_api.py  scraper.py  services.py
server/core/: cache.py  database.py  exceptions.py  logger.py  settings.py
server/domain/: __init__.py  models.py  repositories.py  schemas.py
tests/: conftest.py  test_stock.py
