[project]
name = "stock-api"
version = "1.0"
description = "Simple API to stock data using scraping from market pages"
authors = [{ name = "Renan Penna", email = "renan.penna.tech@gmail.com" }]
license = { text = "NoLicense" }
readme = "README.md"
keywords = ["Challenge", "Stock", "API"]
classifiers = ["Development Status :: 1-Alpha"]

[project.urls]
homepage = "https://github.com/xarpy/agro-business-dashboard"

[tool.dependencies]
python = "^3.10"
fastapi = {version = "==0.115.4", extras = ["all"]}
alembic = "1.14.0"
SQLAlchemy = "2.0.36"
redis = "5.2.0"
markdown = "3.5.2"
python-dotenv = "1.0.1"
psycopg2 = "2.9.10"
pip-tools = "7.4.1"
beautifulsoup4 = "4.12.3"
playwright = "1.48.0"
requests = "2.32.3"
toml = "0.10.2"

[tool.dev-dependencies]
bandit = "1.7.10"
black = "24.10.0"
flake8 = "7.1.1"
interrogate = "1.7.0"
ipdb = "0.13.13"
isort = "5.13.2"
mypy = "1.13.0"
pre-commit = "4.0.1"
pytest = "8.3.3"

[tool.alembic]
script_location = "alembic"
sqlalchemy_url = "postgresql://dbuser:dbpassword@localhost/dbname"

[tool.black]
line-length = 120
exclude = ".git,__pycache__,__init__.py,.mypy_cache,.pytest_cache"

[tool.isort]
skip = [".gitignore"]
extend_skip = [".md", ".json"]
profile = "black"
line_length = 120
force_grid_wrap = 0
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 60
exclude = ["tests"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.mypy]
exclude = ["tests"]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
strict_equality = true
ignore_missing_imports = true
implicit_reexport = false

[tool.pytest.ini_options]
pythonpath = "."
python_functions = ["test"]
log_cli = false
log_level = "INFO"
python_files = ["test_*.py", "*_test.py", "tests/*.py"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agrobusiness/*"]
omit = []

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.coverage.html]
title = "Report Coverage Challenge"
directory = "templates/coverage"
